Aula 2017-05-31: Implementing a Custom Spliterator.